add contact info

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     <h1>Viktor Chernodub</h1>
+    <section class="info-section">
+      <h2>Contact me</h2>
+      <a href="https://github.com/chernodub">github.com/chernodub</a>
+      <a href="https://www.linkedin.com/in/chernodub">
+        www.linkedin.com/in/chernodub/
+      </a>
+    </section>
   </body>
 </html>
