--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="I'm Viktor, a front-end developer. I'm practicing mostly in Angular and willing to know more about TypeScript, JavaScript and all the things about that."
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,500;0,700;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/index.css" />
     <title>chernodub</title>
   </head>
   <body>
-    <h1>Viktor Chernodub</h1>
-    <section class="info-section">
-      <h2>Contact me</h2>
-      <a href="https://github.com/chernodub">github.com/chernodub</a>
-      <a href="https://www.linkedin.com/in/chernodub">
-        www.linkedin.com/in/chernodub/
-      </a>
-    </section>
+    <header>
+      <h1>Viktor Chernodub</h1>
+    </header>
+    <main>
+      <section class="info-section">
+        <h2>Contact me</h2>
+        <a href="https://github.com/chernodub">github.com/chernodub</a>
+        <a href="https://www.linkedin.com/in/chernodub">
+          linkedin.com/in/chernodub/
+        </a>
+      </section>
+    </main>
   </body>
 </html>
