add thunder rendering

--- a/index.html
+++ b/index.html
@@ -15,17 +15,21 @@
     <title>chernodub</title>
   </head>
   <body>
-    <header>
+    <canvas class="background-canvas" id="canvas"></canvas>
+    <header class="header">
       <h1>Viktor Chernodub</h1>
     </header>
     <main>
       <section class="info-section">
-        <h2>Contact me</h2>
+        <h2 style="opacity: 0; position: absolute; user-select: none">
+          Contact
+        </h2>
         <a href="https://github.com/chernodub">github.com/chernodub</a>
         <a href="https://www.linkedin.com/in/chernodub">
-          linkedin.com/in/chernodub/
+          linkedin.com/in/chernodub
         </a>
       </section>
     </main>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
