--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
     <title>chernodub</title>
   </head>
   <body>
-    <canvas class="background-canvas" id="canvas"></canvas>
+    <lightning-container></lightning-container>
+    <!-- <canvas class="background-canvas" id="canvas"></canvas> -->
     <main>
       <h1 class="heading">Viktor Chernodub</h1>
       <section class="info-section">
